# smart-checkout

./: .gitignore  LICENSE  README.md  RUN_APP.md  bao_cao_c1_2_fix.md  bao_cao_chuong1_2.md  bao_cao_chuong1_2_de_tai.md  crawler.py  crawler_analysis_report.docx  eda.ipynb  eda.py  main.py  migrate.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_api.txt  run_pipeline.py  unified_pipeline.py
collection/: README.md  cleaning.py  crawler.py  gdrive_collector.py  object_scrape.py  storage.py
collection/utils/: gdrive_handler.py
config/: settings.yaml
data/: sku_metadata.json
docs/: ARCHITECTURE.md  PRODUCTION.md  PROJECT_GUIDE_VI.md  implementation_plan.md
documentation/: Ke_hoach_xu_ly_du_lieu_chi_tiet.md  README.md  SPARK_CONCEPTS_README.md  Yêu cầu dữ liệu.docx  docx_content.txt  nhom8_bigdata_smartcheckout.docx
preprocessing/: PREPROCESSING-README.md  cleaning.py  data_preprocessing.py  extract_data.py  integrate.py  transform.py
processing/: PROCESSING-README.md  api_server.py  data_processing.py  labeling.py  object_processor.py
scripts/: evaluate.py  ingest_catalog.py  ingest_from_sources.py  setup_sample_data.py  test_detection_and_embedding.py  test_siglip.py  test_single_image.py
src/: __init__.py
src/api/: schemas.py  (+1 more)
ssc_service/: README.md  config.py  main.py  requirements.txt
ssc_ui/: README.md  index.html
tests/: conftest.py  test_bulk_ingest.py  test_detection.py  test_embedding.py  test_fusion.py  test_milvus.py  test_minio_reader.py  test_mongodb_reader.py  test_pipeline.py  test_production_integration.py
(+45 files in other folders)
